[gd_scene load_steps=14 format=3 uid="uid://b2qho1nfgij17"]

[ext_resource type="Script" path="res://scripts/map.gd" id="1_kgnbi"]
[ext_resource type="Texture2D" uid="uid://bpi7unrtte02" path="res://assets/sprites/maptile.png" id="1_xyy8a"]
[ext_resource type="FontFile" uid="uid://bj1mb450wr020" path="res://assets/fonts/PixelOperator8.ttf" id="2_rbl2e"]
[ext_resource type="Script" path="res://scripts/maparea.gd" id="4_semty"]
[ext_resource type="PackedScene" uid="uid://chy8x88p31ouh" path="res://interface/scene_transition.tscn" id="6_52xoe"]
[ext_resource type="PackedScene" uid="uid://cb8vl66q1g7ix" path="res://interface/spawner.tscn" id="7_lcqmx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mot7m"]
atlas = ExtResource("1_xyy8a")
region = Rect2(0, 80, 48, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vgrq1"]
size = Vector2(64, 58.5)

[sub_resource type="AtlasTexture" id="AtlasTexture_5st3l"]
atlas = ExtResource("1_xyy8a")
region = Rect2(48, 80, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke2ci"]
atlas = ExtResource("1_xyy8a")
region = Rect2(0, 128, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cst7x"]
atlas = ExtResource("1_xyy8a")
region = Rect2(48, 128, 48, 48)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hmyt2"]
texture = ExtResource("1_xyy8a")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
7:5/0 = 0

[sub_resource type="TileSet" id="TileSet_uuuls"]
sources/1 = SubResource("TileSetAtlasSource_hmyt2")

[node name="map" type="Control"]
layout_mode = 3
anchor_right = 1.007
anchor_bottom = 1.025
offset_left = 60.0
offset_top = 3.0
offset_right = -580.064
offset_bottom = -357.2
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kgnbi")

[node name="station" type="Control" parent="."]
light_mask = 0
visibility_layer = 3
anchors_preset = 0
offset_left = 114.0
offset_top = 8.0
offset_right = 178.0
offset_bottom = 68.0
pivot_offset = Vector2(32, 40)

[node name="TextureButton" type="TextureButton" parent="station"]
light_mask = 0
visibility_layer = 3
layout_mode = 0
offset_left = 8.0
offset_top = 16.0
offset_right = 56.0
offset_bottom = 64.0
pivot_offset = Vector2(24, 24)
texture_normal = SubResource("AtlasTexture_mot7m")

[node name="Label" type="Label" parent="station"]
light_mask = 0
visibility_layer = 3
layout_mode = 0
offset_left = -16.0
offset_right = 78.0
offset_bottom = 8.0
theme_override_fonts/font = ExtResource("2_rbl2e")
theme_override_font_sizes/font_size = 8
text = "Police Station"
horizontal_alignment = 1

[node name="stationarea" type="Area2D" parent="station" groups=["interact", "map"]]
position = Vector2(32, 30)
collision_layer = 4
collision_mask = 0
script = ExtResource("4_semty")

[node name="CollisionShape2D" type="CollisionShape2D" parent="station/stationarea"]
position = Vector2(1, 9)
shape = SubResource("RectangleShape2D_vgrq1")
debug_color = Color(0.737255, 0.321569, 0.858824, 0.419608)

[node name="crimescene" type="Control" parent="."]
anchors_preset = 0
offset_left = 114.0
offset_top = 176.0
offset_right = 178.0
offset_bottom = 240.0
pivot_offset = Vector2(32, 24)

[node name="TextureButton" type="TextureButton" parent="crimescene"]
layout_mode = 0
offset_left = 8.0
offset_right = 56.0
offset_bottom = 48.0
pivot_offset = Vector2(24, 24)
texture_normal = SubResource("AtlasTexture_5st3l")

[node name="Label" type="Label" parent="crimescene"]
layout_mode = 0
offset_left = -16.0
offset_top = 56.0
offset_right = 80.0
offset_bottom = 64.0
theme_override_fonts/font = ExtResource("2_rbl2e")
theme_override_font_sizes/font_size = 8
text = "Crime Scene"
horizontal_alignment = 1

[node name="scenearea" type="Area2D" parent="crimescene" groups=["interact", "map"]]
position = Vector2(33, 10)
collision_layer = 4
collision_mask = 0
script = ExtResource("4_semty")

[node name="CollisionShape2D" type="CollisionShape2D" parent="crimescene/scenearea"]
position = Vector2(-1, 10)
shape = SubResource("RectangleShape2D_vgrq1")
debug_color = Color(0.737255, 0.321569, 0.858824, 0.419608)

[node name="vhome" type="Control" parent="."]
anchors_preset = 0
offset_left = 290.0
offset_top = 112.0
offset_right = 354.0
offset_bottom = 176.0
pivot_offset = Vector2(32, 24)

[node name="TextureButton" type="TextureButton" parent="vhome"]
layout_mode = 1
anchors_preset = -1
offset_left = 8.0
offset_right = 56.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(24, 24)
texture_normal = SubResource("AtlasTexture_ke2ci")

[node name="Label" type="Label" parent="vhome"]
layout_mode = 0
offset_left = -16.0
offset_top = 56.0
offset_right = 80.0
offset_bottom = 64.0
theme_override_fonts/font = ExtResource("2_rbl2e")
theme_override_font_sizes/font_size = 8
text = "Victim's Home"
horizontal_alignment = 1

[node name="vhomearea" type="Area2D" parent="vhome" groups=["interact", "map"]]
position = Vector2(32, 16)
collision_layer = 4
collision_mask = 0
script = ExtResource("4_semty")

[node name="CollisionShape2D" type="CollisionShape2D" parent="vhome/vhomearea"]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_vgrq1")
debug_color = Color(0.737255, 0.321569, 0.858824, 0.419608)

[node name="casino" type="Control" parent="."]
anchors_preset = 0
offset_left = 418.0
offset_top = 224.0
offset_right = 482.0
offset_bottom = 288.0
pivot_offset = Vector2(32, 24)

[node name="TextureButton" type="TextureButton" parent="casino"]
layout_mode = 0
offset_left = 8.0
offset_right = 56.0
offset_bottom = 48.0
pivot_offset = Vector2(24, 24)
texture_normal = SubResource("AtlasTexture_cst7x")

[node name="Label" type="Label" parent="casino"]
layout_mode = 0
offset_left = 8.0
offset_top = 56.0
offset_right = 56.0
offset_bottom = 64.0
theme_override_fonts/font = ExtResource("2_rbl2e")
theme_override_font_sizes/font_size = 8
text = "Casino"
horizontal_alignment = 1

[node name="casinoarea" type="Area2D" parent="casino" groups=["interact", "map"]]
position = Vector2(32, 18)
collision_layer = 4
collision_mask = 0
script = ExtResource("4_semty")

[node name="CollisionShape2D" type="CollisionShape2D" parent="casino/casinoarea"]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_vgrq1")
debug_color = Color(0.737255, 0.321569, 0.858824, 0.419608)

[node name="TileMap" type="TileMap" parent="."]
show_behind_parent = true
position = Vector2(74, 0)
tile_set = SubResource("TileSet_uuuls")
format = 2
layer_0/tile_data = PackedInt32Array(0, 65537, 1, 65536, 65537, 1, 65537, 65537, 1, 131073, 65537, 1, 1, 65537, 1, 2, 65537, 1, 65538, 65537, 1, 131074, 65537, 1, 196609, 65537, 1, 196608, 65537, 1, 131072, 65537, 1, 196610, 65537, 1, 196611, 65537, 1, 262145, 65537, 1, 262144, 65537, 1, 262146, 65537, 1, 262147, 65537, 1, 262148, 1, 1, 262149, 65537, 1, 262150, 65537, 1, 262151, 65537, 1, 196614, 65537, 1, 196613, 65537, 1, 196612, 65537, 1, 131076, 65537, 1, 65540, 65537, 1, 65539, 65537, 1, 131075, 65537, 1, 3, 65537, 1, 4, 65537, 1, 5, 65537, 1, 6, 65537, 1, 65542, 65537, 1, 131079, 65537, 1, 196615, 65537, 1, 131078, 65537, 1, 65541, 65537, 1, 131077, 65537, 1, 65543, 65537, 1, 7, 65537, 1, 327684, 1, 1, 393220, 1, 1, 458756, 131073, 1, 524292, 131073, 1, 589828, 131073, 1, 655364, 131073, 1, 655367, 65537, 1, 720903, 65537, 1, 786439, 65537, 2, 327680, 65537, 1, 393216, 65537, 1, 458752, 65537, 1, 524288, 65537, 1, 589824, 458753, 2, 655360, 458753, 3, 720896, 65537, 1, 786432, 65537, 1, 851968, 65537, 1, 327681, 65537, 1, 393217, 65537, 1, 458753, 65537, 1, 524289, 65537, 1, 589825, 65537, 1, 655361, 65537, 1, 720897, 65537, 1, 786433, 65537, 1, 851969, 65537, 1, 327682, 65537, 1, 393218, 65537, 1, 458754, 65537, 1, 524290, 65537, 1, 589826, 65537, 1, 655362, 65537, 1, 720898, 65537, 1, 786434, 65537, 1, 851970, 65537, 1, 327683, 65537, 1, 393219, 65537, 1, 458755, 65537, 1, 524291, 65537, 1, 589827, 65537, 1, 655363, 65537, 1, 720899, 65537, 1, 786435, 65537, 1, 851971, 65537, 1, 327685, 65537, 1, 393221, 65537, 1, 458757, 65537, 1, 524293, 65537, 1, 589829, 65537, 1, 655365, 65537, 1, 720901, 65537, 1, 786437, 65537, 1, 851973, 65537, 1, 327686, 65537, 1, 393222, 65537, 1, 458758, 65537, 1, 524294, 65537, 1, 589830, 65537, 1, 655366, 65537, 1, 720902, 65537, 1, 786438, 65537, 2, 851974, 65537, 1, 327687, 65537, 1, 393223, 65537, 1, 458759, 65537, 1, 524295, 1, 3, 589831, 1, 4, 851975, 65537, 1, 720900, 65537, 1, 786436, 65537, 1, 851972, 65537, 1, 8, 65537, 1, 65544, 65537, 1, 131080, 65537, 1, 196616, 65537, 1, 262152, 65537, 1, 327688, 262145, 2, 393224, 262145, 3, 458760, 65537, 1, 524296, 65537, 3, 589832, 65537, 4, 655368, 65537, 1, 720904, 65537, 1, 786440, 65537, 2, 851976, 65537, 1, 9, 65537, 1, 65545, 327681, 0, 131081, 327681, 1, 196617, 65537, 1, 262153, 65537, 1, 327689, 327681, 3, 393225, 262145, 2, 458761, 65537, 1, 524297, 131073, 3, 589833, 131073, 4, 655369, 65537, 1, 720905, 65537, 1, 786441, 65537, 2, 851977, 65537, 1, 10, 65537, 1, 65546, 393217, 0, 131082, 393217, 1, 196618, 65537, 1, 262154, 65537, 1, 327690, 262145, 2, 393226, 262145, 3, 458762, 65537, 1, 524298, 196609, 3, 589834, 196609, 4, 655370, 65537, 1, 720906, 65537, 1, 786442, 65537, 2, 851978, 65537, 1, 11, 65537, 1, 65547, 458753, 0, 131083, 458753, 1, 196619, 65537, 1, 262155, 65537, 1, 327691, 262145, 3, 393227, 327681, 3, 458763, 65537, 1, 524299, 65537, 1, 589835, 65537, 1, 655371, 65537, 1, 720907, 65537, 1, 786443, 65537, 2, 851979, 65537, 1, 12, 65537, 1, 65548, 65537, 1, 131084, 65537, 1, 196620, 65537, 1, 262156, 262145, 4, 327692, 327681, 3, 393228, 458753, 4, 458764, 65537, 1, 524300, 1, 0, 589836, 131073, 1, 655372, 131073, 1, 720908, 131073, 1, 786444, 131073, 2, 851980, 65537, 1, 13, 65537, 1, 65549, 65537, 1, 131085, 65537, 1, 196621, 65537, 1, 262157, 65537, 1, 327693, 65537, 1, 393229, 65537, 1, 458765, 65537, 1, 524301, 65537, 0, 589837, 65537, 1, 655373, 65537, 1, 720909, 65537, 1, 786445, 65537, 1, 851981, 65537, 1, 14, 65537, 1, 65550, 65537, 1, 131086, 327681, 0, 196622, 327681, 1, 262158, 65537, 1, 327694, 65537, 1, 393230, 65537, 1, 458766, 65537, 1, 524302, 65537, 1, 589838, 65537, 1, 655374, 65537, 1, 720910, 65537, 1, 786446, 327681, 4, 851982, 262145, 3, 15, 65537, 1, 65551, 65537, 1, 131087, 393217, 0, 196623, 393217, 1, 262159, 65537, 1, 327695, 65537, 1, 393231, 65537, 1, 458767, 65537, 1, 524303, 65537, 1, 589839, 65537, 1, 655375, 65537, 1, 720911, 65537, 1, 786447, 327681, 4, 16, 65537, 1, 65552, 65537, 1, 131088, 458753, 0, 196624, 458753, 1, 262160, 65537, 1, 327696, 65537, 1, 393232, 65537, 1, 458768, 65537, 1, 524304, 65537, 1, 589840, 65537, 1, 655376, 65537, 1, 720912, 65537, 1, 786448, 65537, 1, 17, 65537, 1, 65553, 65537, 1, 131089, 65537, 1, 196625, 65537, 1, 262161, 458753, 5, 327697, 65537, 1, 393233, 65537, 1, 458769, 65537, 1, 524305, 65537, 0, 589841, 65537, 1, 655377, 65537, 1, 720913, 65537, 1, 786449, 65537, 1, 18, 65537, 1, 65554, 65537, 1, 131090, 65537, 1, 196626, 262145, 4, 262162, 393217, 4, 327698, 65537, 1, 393234, 65537, 1, 458770, 65537, 1, 524306, 65537, 0, 589842, 65537, 1, 655378, 65537, 1, 720914, 65537, 1, 786450, 393217, 2, 19, 65537, 1, 65555, 65537, 1, 131091, 65537, 1, 196627, 262145, 3, 262163, 393217, 4, 327699, 393217, 2, 393235, 393217, 3, 458771, 65537, 1, 524307, 65537, 0, 589843, 65537, 1, 655379, 65537, 1, 720915, 65537, 1, 786451, 458753, 2, 20, 65537, 1, 65556, 327681, 0, 131092, 327681, 1, 196628, 458753, 4, 262164, 393217, 4, 327700, 458753, 2, 393236, 458753, 3, 458772, 65537, 1, 524308, 65537, 0, 589844, 65537, 1, 655380, 262145, 2, 720916, 458753, 4, 786452, 458753, 4, 851988, 65537, 1, 21, 65537, 1, 65557, 393217, 0, 131093, 393217, 1, 196629, 65537, 1, 262165, 65537, 1, 327701, 65537, 1, 393237, 65537, 1, 458773, 65537, 1, 524309, 65537, 0, 589845, 65537, 1, 655381, 458753, 4, 720917, 458753, 5, 786453, 458753, 4, 851989, 65537, 1, 22, 65537, 1, 65558, 458753, 0, 131094, 458753, 1, 196630, 65537, 1, 262166, 65537, 1, 327702, 393217, 2, 393238, 393217, 3, 458774, 65537, 1, 524310, 65537, 0, 589846, 65537, 1, 655382, 65537, 1, 720918, 65537, 1, 786454, 65537, 1, 851990, 65537, 1, 23, 65537, 1, 65559, 65537, 1, 131095, 65537, 1, 196631, 65537, 1, 262167, 65537, 1, 327703, 458753, 2, 393239, 458753, 3, 458775, 65537, 1, 524311, 131073, 0, 589847, 131073, 1, 655383, 131073, 1, 720919, 131073, 1, 786455, 131073, 1, 851991, 131073, 1, 24, 65537, 1, 65560, 65537, 1, 131096, 65537, 1, 196632, 65537, 1, 262168, 65537, 1, 327704, 65537, 1, 393240, 65537, 1, 458776, 65537, 1, 524312, 65537, 1, 589848, 65537, 1, 655384, 65537, 1, 720920, 65537, 1, 786456, 65537, 1, 851992, 65537, 1, 25, 65537, 1, 65561, 65537, 1, 131097, 65537, 1, 196633, 65537, 1, 262169, 65537, 1, 327705, 393217, 2, 393241, 393217, 3, 458777, 65537, 1, 524313, 65537, 1, 589849, 327681, 0, 655385, 327681, 1, 720921, 65537, 1, 786457, 65537, 1, 851993, 65537, 1, 26, 65537, 1, 65562, 65537, 1, 131098, 65537, 1, 196634, 65537, 1, 262170, 65537, 1, 327706, 458753, 2, 393242, 458753, 3, 458778, 65537, 1, 524314, 65537, 1, 589850, 393217, 0, 655386, 393217, 1, 720922, 65537, 1, 786458, 65537, 1, 851994, 65537, 1, 917504, 65537, 1, 983040, 65537, 1, 1048576, 393217, 2, 917505, 65537, 1, 983041, 65537, 1, 1048577, 458753, 2, 917506, 65537, 1, 983042, 65537, 1, 1048578, 65537, 1, 917507, 65537, 1, 983043, 65537, 1, 1048579, 65537, 1, 917508, 65537, 1, 983044, 65537, 1, 1048580, 65537, 1, 917509, 65537, 1, 983045, 65537, 1, 1048581, 65537, 1, 917510, 65537, 1, 983046, 65537, 1, 1048582, 65537, 1, 917511, 65537, 1, 983047, 65537, 1, 1048583, 65537, 1, 917512, 65537, 1, 983048, 65537, 1, 1048584, 65537, 1, 917513, 196609, 0, 983049, 196609, 1, 1048585, 196609, 2, 917514, 65537, 1, 983050, 65537, 1, 1048586, 65537, 1, 917515, 196609, 0, 983051, 196609, 1, 1048587, 196609, 2, 917516, 65537, 1, 983052, 65537, 1, 1048588, 65537, 1, 917517, 65537, 1, 983053, 65537, 1, 1048589, 65537, 1, 917518, 458753, 5, 983054, 458753, 5, 1048590, 65537, 1, 917519, 327681, 3, 983055, 393217, 4, 1048591, 65537, 1, 917520, 458753, 4, 983056, 458753, 4, 1048592, 65537, 1, 917521, 65537, 1, 983057, 65537, 1, 1048593, 327681, 2, 917522, 262145, 1, 983058, 65537, 1, 1048594, 327681, 2, 917523, 65537, 1, 983059, 327681, 2, 1048595, 327681, 2, 917524, 65537, 1, 983060, 327681, 2, 1048596, 327681, 2, 917525, 65537, 1, 983061, 65537, 1, 1048597, 65537, 1, 917526, 65537, 1, 983062, 65537, 1, 1048598, 65537, 1, 917527, 65537, 1, 983063, 65537, 1, 1048599, 65537, 1, 917528, 65537, 1, 983064, 65537, 1, 1048600, 65537, 1, 917529, 65537, 1, 983065, 65537, 1, 1048601, 65537, 1, 917530, 65537, 1, 983066, 65537, 1, 1048602, 65537, 1, 1114112, 393217, 3, 1179648, 65537, 1, 1114113, 458753, 3, 1179649, 65537, 1, 1114114, 65537, 1, 1179650, 65537, 1, 1114115, 65537, 1, 1179651, 65537, 1, 1114116, 65537, 1, 1179652, 65537, 1, 1114117, 65537, 1, 1179653, 65537, 1, 1114118, 65537, 1, 1179654, 65537, 1, 1114119, 65537, 1, 1179655, 65537, 1, 1114120, 65537, 1, 1179656, 65537, 1, 1114121, 65537, 1, 1179657, 65537, 1, 1114122, 65537, 1, 1179658, 327681, 2, 1114123, 65537, 1, 1179659, 327681, 2, 1114124, 65537, 1, 1179660, 327681, 2, 1114125, 65537, 1, 1179661, 327681, 2, 1114126, 65537, 1, 1179662, 327681, 2, 1114127, 327681, 2, 1179663, 327681, 2, 1114128, 327681, 2, 1179664, 327681, 2, 1114129, 327681, 2, 1179665, 327681, 2, 1114130, 327681, 2, 1179666, 327681, 2, 1114131, 327681, 2, 1179667, 327681, 2, 1114132, 327681, 2, 1179668, 327681, 2, 1114133, 65537, 1, 1179669, 65537, 1, 1114134, 65537, 1, 1179670, 65537, 1, 1114135, 65537, 1, 1179671, 65537, 1, 1114136, 65537, 1, 1179672, 65537, 1, 1114137, 65537, 1, 1179673, 65537, 1, 1114138, 65537, 1, 1179674, 65537, 1, 27, 65537, 1, 65563, 65537, 1, 131099, 65537, 1, 196635, 65537, 1, 262171, 65537, 1, 327707, 65537, 1, 393243, 65537, 1, 458779, 65537, 1, 524315, 65537, 1, 589851, 458753, 0, 655387, 458753, 1, 720923, 65537, 1, 786459, 65537, 1, 851995, 65537, 1, 917531, 65537, 1, 983067, 65537, 1, 1048603, 65537, 1, 1114139, 65537, 1, 1179675, 65537, 1, 28, 65537, 1, 65564, 65537, 1, 131100, 65537, 1, 196636, 65537, 1, 262172, 65537, 1, 327708, 65537, 1, 393244, 65537, 1, 458780, 65537, 1, 524316, 65537, 1, 589852, 65537, 1, 655388, 65537, 1, 720924, 65537, 1, 786460, 65537, 1, 851996, 65537, 1, 917532, 65537, 1, 983068, 65537, 1, 1048604, 65537, 1, 1114140, 65537, 1, 1179676, 65537, 1, 851983, 262145, 2, 851984, 458753, 4, 851985, 65537, 1, 851986, 196609, 3, 851987, 458753, 3, 65531, 65537, 1, 131067, 65537, 1, 196603, 65537, 1, 262139, 65537, 1, 327675, 65537, 1, 393211, 65537, 1, 458747, 65537, 1, 524283, 65537, 1, 589819, 65537, 1, 655355, 65537, 1, 720891, 65537, 1, 786427, 65537, 1, 851963, 65537, 1, 917499, 65537, 1, 983035, 65537, 1, 1048571, 65537, 1, 1114107, 65537, 1, 1179643, 65537, 1, 1245179, 65537, 1, 65532, 65537, 1, 131068, 65537, 1, 196604, 65537, 1, 262140, 65537, 1, 327676, 65537, 1, 393212, 65537, 1, 458748, 65537, 1, 524284, 65537, 1, 589820, 65537, 1, 655356, 65537, 1, 720892, 65537, 1, 786428, 65537, 1, 851964, 65537, 1, 917500, 65537, 1, 983036, 65537, 1, 1048572, 65537, 1, 1114108, 65537, 1, 1179644, 65537, 1, 1245180, 65537, 1, 65533, 65537, 1, 131069, 65537, 1, 196605, 65537, 1, 262141, 65537, 1, 327677, 65537, 1, 393213, 65537, 1, 458749, 65537, 1, 524285, 65537, 1, 589821, 65537, 1, 655357, 65537, 1, 720893, 65537, 1, 786429, 65537, 1, 851965, 65537, 1, 917501, 393217, 2, 983037, 393217, 3, 1048573, 65537, 1, 1114109, 65537, 1, 1179645, 65537, 1, 1245181, 65537, 1, 65534, 65537, 1, 131070, 65537, 1, 196606, 65537, 1, 262142, 65537, 1, 327678, 65537, 1, 393214, 65537, 1, 458750, 65537, 1, 524286, 65537, 1, 589822, 65537, 1, 655358, 65537, 1, 720894, 65537, 1, 786430, 65537, 1, 851966, 65537, 1, 917502, 458753, 2, 983038, 458753, 3, 1048574, 65537, 1, 1114110, 65537, 1, 1179646, 65537, 1, 1245182, 65537, 1, 65535, 65537, 1, 131071, 65537, 1, 196607, 65537, 1, 262143, 65537, 1, 327679, 65537, 1, 393215, 65537, 1, 458751, 65537, 1, 524287, 65537, 1, 589823, 65537, 1, 655359, 393217, 2, 720895, 393217, 3, 786431, 65537, 1, 851967, 65537, 1, 917503, 65537, 1, 983039, 65537, 1, 1048575, 65537, 1, 1114111, 65537, 1, 1179647, 65537, 1, 1245183, 65537, 1)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(270, 151)
zoom = Vector2(2.14, 2.14)

[node name="SceneTransition" parent="." instance=ExtResource("6_52xoe")]
visible = false
position = Vector2(-20, -91)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="Spawner" parent="." instance=ExtResource("7_lcqmx")]
position = Vector2(148, 69)

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(4, 301, 540, 301, 532, 5, -4, 5, 4, 309, -12, 317, -20, -19, 548, -11, 548, 309, -20, 309, 4, 293)

[connection signal="location_entered" from="station/stationarea" to="." method="_on_stationarea_location_entered"]
[connection signal="location_entered" from="crimescene/scenearea" to="." method="_on_scenearea_location_entered"]
[connection signal="location_entered" from="vhome/vhomearea" to="." method="_on_vhomearea_location_entered"]
[connection signal="location_entered" from="casino/casinoarea" to="." method="_on_casinoarea_location_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
